# cmake-example-project

./: .gitignore  BuildOptions.cmake  CMakeLists.txt  README.md  build.sh  setup.sh
buildresults/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  build.ninja
buildresults/CPM_modules/: Findcmocka.cmake  Findopenlibm.cmake
buildresults/cmocka/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  build.ninja  cmocka.pc  config.h
buildresults/cmocka/doc/: Doxyfile.docs
buildresults/cmocka/tmp/: project_cmocka-cfgcmd.txt
buildresults/src/: printf_tests
buildresults/test/: libc_tests  printf_tests  printf_tests.xml
buildresults/test/testresults/: heapsort_tests.xml  memcpy_tests.xml  memset_tests.xml  printf_tests.xml
cmake/: CheckAndApplyFlags.cmake
scripts/: build  regen-cmake  test
src/: CMakeLists.txt
src/gdtoa/: CMakeLists.txt
test/: CMakeLists.txt
